[firestarter-issue#12] vpc peering connection (#9)
* feat: create iamuser product for sc

* fix: build error

* fix:tagOption is existed error

* refactor: service catalog product

* refactor: update

* fix: templatebody error

* refactor: lazy

* refactor: errror

* fix: error

* fix: test

* fix: error

* fix: build error

* fix: error

* fix: build error

* fix: error

* fix: build error

* refactor: add product version history

* fix: error

* feat: iam user product

* refactor: iam user group

* refactor: 입력 파라미터 한글 테스트

* fix: templatebody error

* refactor: add parameter group

* feat: 여러 IAM 유저를 생성할 수 있도록 CF Parameter 수정

* feat: IAM 유저를 리스트로 입력받아 생성할 수 있도록 기능 추가

* chore: clean up

* chore: fix cdk build error

* refactor: iam user parameter 리스트 디버깅

* chore: build error

* refactor: cfn parameter array test

* refactor: cfn parameter commaDelimitedList 처리 테스트

* chore: commalist debugging

* chore: test

* chore: test

* chore: lazy test

* chore: refactoring

* chore: update

* refactor: create iam user product

* chore: fix build error

* feat: add iam user initialize password

* feat: create Access Key for IAM User

* feat/firstarter-issue#7

* refactor: add PR template

* chore: add gitignore

* add vpc peering connection product

* feat:update github actions workflow

* feat: firestarter-issue#12

* update

* add description

* bug: fix github workflow

* update main.ts

* update workflow

* update

* bug: cfn-template path fixed

* bug: fix cf template

* refactor: update workflow

* refactor: update workflow

* refactor: update workflow

--- a/.github/cdk-workflow-template.yaml.org
+++ b/.github/cdk-workflow-template.yaml.org
@@ -1,21 +1,15 @@
 name: {{PROJECT}}
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - "products/{{PROJECT}}/**"
-      - "./github/workflows/{{PROJECT}}.yaml"
   pull_request:
     types:
       - labeled
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Enable Only when it is PROD'
-        required: false
-        type: boolean
+  push:
+    branches:
+      - 'feat**'
+    paths:
+      - "products/{{PROJECT}}/**"
+      - "./github/workflows/{{PROJECT}}.yaml"
 
 env:
   CI: "true"
@@ -25,7 +19,7 @@ env:
   EXECUTE_ROLE: github-deploy-role
 
 jobs:
-  deploy_to_dev:
+  build_and_deploy:
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
@@ -64,10 +58,6 @@ jobs:
           role-session-name: github-session
           aws-region: ap-northeast-2
 
-      #- name: cdk diff
-      #  run: npm run diff
-      #  working-directory: products/${{inputs.app_name}}
-
       - name: cdk build 
         run: npm run synth
         working-directory: products/${{env.PROJECT_NAME}}
@@ -77,14 +67,17 @@ jobs:
         working-directory: products/${{env.PROJECT_NAME}}
 
   deploy_to_prod:
+    #if: github.event_name == 'pull_request' && ${{ inputs.stage == 'prod'}}
+    #if: github.event_name != 'push'
     if: ${{ github.ref == 'refs/heads/main' }}
+    #needs: deploy_to_stage
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     permissions:
       id-token: write
       contents: read
     env:
-      STAGE: prod
+      STAGE: prod 
     steps:
       #- name: approval
       #  uses: trstringer/manual-approval@v1
